2008-01-09  Nicola Pero  <nicola.pero@meta-innovation.com>

	* config.make.in (LN_S_RECURSIVE): New variable.
	* Instance/application.make: Use it when symlinking a directory.
	* Instance/framework.make: Same changes.
	
2008-01-08  Adam Fedor  <fedor@gnu.org>

	* Version 2.0.4 (on stable branch).

2008-01-03  Richard Frith-Macdonald <rfm@gnu.org>

	* relative_path.sh: Revert previous change as it broke the use of
	relative paths within the configuration system ... critical for
	ms-windows systems where relative paths are used by default!

2008-01-01  Adam Fedor  <fedor@gnu.org>

	* Version 2.0.3 (on stable branch).

2007-12-30  Adam Fedor  <fedor@gnu.org>

	* Documentation/README.Darwin: Update for compiling with
	Apple gcc.

2007-12-26  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Documentation/debugapp.1: Minor updates.
	* Documentation/gnustep-config.1: Same.
	* Documentation/openapp.1: Same.
	* Documentation/opentool.1: Same.
	* Documentation/library-combo.7: Same.
	
2007-12-26  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUmakefile.in (install): Install the new debugapp.1,
	gnustep-config.1, opentool.1 and library-combo.7 manpages.
	(uninstall): Uninstall them.
	(uninstall): Remove mandir, mandir/man1, mandir/man7, tooldir and
	GNUSTEP_CONFIG_FILE_DIR if empty.
	
2007-12-26  Dennis Leeuw  <dleeuw@made-it.com>

	* Documentation/debugapp.1: New file.
	* Documentation/gnustep-config.1: New file.
	* Documentation/opentool.1: New file.
	* Documentation/library-combo.7: New file.
	* Documentation/openapp.1: Rewritten.
	* Documentation/GNUstep.7: Rewritten.

2007-12-20  Adam Fedor  <fedor@gnu.org>

	* Master/nsis.make: Generalize to install in other than Applications.
	* Master/rules.make: Remove nsis include for now
	* nsi-app.template, Documentation/make.texi: updates.

2007-12-20  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: Emit a warning if GNUSTEP_MAKEFILES contains a
	space.
	* configure: Regenerated.
	